maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  try {if !aMurNord(x,y) {a(0)=getIndication(x,y-1)}} catch {}
  ^ShortestPathMaze:24: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  try {if !aMurNord(x,y-1) {a(1)=getIndication(x,y+1)}} catch {}
  ^ShortestPathMaze:25: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  try {if !aMurOuest(x+1,y) {a(2)=getIndication(x+1,y)}} catch {}
  ^ShortestPathMaze:26: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  try {if !aMurOuest(x,y) {a(3)=getIndication(x-1,y)}} catch {}
  ^ShortestPathMaze:28: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return Directions(a.zipWithIndex.min._2)
  ^